1-network-stack.yaml
Parameters:
  VpcCidrBlock:
    Type: String
    Description: Cidr block of the Vpc
    Default: "10.10.0.0/16"
  SubnetCidrBlock:
    Type: String
    Description: Cidr block of the Subnet
    Default: "10.10.0.0/24"

Mappings:
  EnvTypeMap:
    ap-southeast-2:
      environment: "dev"
    us-east-1:
      environment: "prod"

Resources:
  Vpc:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock:
        Ref: VpcCidrBlock
      EnableDnsHostnames: True
      EnableDnsSupport: True
      Tags:
        - Key: "Name"
          Value:
            !Join
              - "-"
              - - !FindInMap
                  - EnvTypeMap
                  - Ref: AWS::Region
                  - environment
                - Ref: AWS::StackName
                - "vpc"
        - Key: "Environment"
          Value: !FindInMap
            - EnvTypeMap
            - Ref: AWS::Region
            - environment

  Subnet:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock:
        Ref: SubnetCidrBlock
      MapPublicIpOnLaunch: true
      VpcId:
        Ref: Vpc
      Tags:
        - Key: "Name"
          Value:
            !Join
              - "-"
              - - !FindInMap
                  - EnvTypeMap
                  - Ref: AWS::Region
                  - environment
                - Ref: AWS::StackName
                - "subnet"

  VmSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName:
        !Join
          - "-"
          - - !FindInMap
              - EnvTypeMap
              - Ref: AWS::Region
              - environment
            - Ref: AWS::StackName
            - "sg" 
      GroupDescription: "Security Group for Virtual Machines"
      VpcId:
        Ref: Vpc
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0

  Igw:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
      - Key: "Name"
        Value:
          !Join
            - "-"
            - - !FindInMap
                - EnvTypeMap
                - Ref: AWS::Region
                - environment
              - Ref: AWS::StackName
              - "igw"
      - Key: "Environment"
        Value: !FindInMap
          - EnvTypeMap
          - Ref: AWS::Region
          - environment
          
  IgwAttach:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId:
        Ref: Igw
      VpcId:
        Ref: Vpc

  RouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: Vpc
  
  Routes:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: RouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: Igw

Outputs:
  CreatedVpcId:
    Description: VPC ID of the created VPC in this stack.
    Value:
      Ref: Vpc
  CreatedSubnetId:
    Description: Subnet ID of the created Subnet in this stack.
    Value:
      Ref: Subnet
  CreatedVmSecurityGroup:
    Description: Group ID of the created Vm Security in this stack.
    Value:
      Ref: VmSecurityGroup
